cours stream + cours oop fini